# agent-chat-reader

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_chat_reader/: __init__.py  claude.py  cli.py  codex.py  models.py  output.py
tests/: test_package.py
