[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-chat-reader"
version = "0.1.3"
description = "Read and search Codex CLI and Claude Code chat history from the terminal."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ali K", email = "alikgithb@gmail.com" },
]
maintainers = [
  { name = "Ali K", email = "alikgithb@gmail.com" },
]
keywords = ["cli", "developer-tools", "codex", "claude", "chat-history", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.15",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_chat_reader"]

[project.scripts]
agent-chat-reader = "agent_chat_reader.cli:main"

[project.urls]
Homepage = "https://github.com/alik-git/agent-chat-reader"
Repository = "https://github.com/alik-git/agent-chat-reader"
Issues = "https://github.com/alik-git/agent-chat-reader/issues"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  # Core Python style and modernization.
  "E",       # pycodestyle errors
  "W",       # pycodestyle warnings
  "I",       # import sorting
  "UP",      # Python modernization
  # Bug-risk checks.
  "B",       # flake8-bugbear bug patterns
  "BLE",     # blind except / bare except
  "PLE",     # pylint errors
  "PLW",     # pylint warnings
  "S",       # Bandit security checks; comment out if too noisy.
  # Maintainability checks.
  "A",       # flake8-builtins: avoid shadowing id/list/input/etc.
  "ARG",     # unused function arguments
  "C4",      # cleaner comprehensions
  "DTZ",     # timezone-aware datetimes
  "FBT003",  # boolean positional values in function calls
  "NPY",     # NumPy-specific checks
  "PERF",    # performance footguns
  "PTH",     # prefer pathlib over os.path
  "RET",     # return control-flow simplification
  "SIM",     # flake8-simplify
  # Logging and import hygiene.
  "G",       # logging format strings
  "LOG",     # logging anti-patterns
  "TC",      # type-checking import hygiene
  # Strict docs/annotations/tests. Comment these out for a looser template.
  "ANN201",  # public function return annotations
  "ANN202",  # private function return annotations
  "ANN204",  # special-method return annotations
  "D100",    # module docstrings
  "D104",    # package docstrings
  "D102",    # public method docstrings
  "D103",    # public function docstrings
  "D2",      # docstring whitespace/placement conventions
  "D4",      # docstring content conventions
  "PT",      # pytest style
  # Ruff suppression hygiene and narrow style correctness rules.
  "RUF100",  # unused noqa
  "RUF102",  # invalid noqa rule code
  "RUF104",  # unmatched ruff suppression comments
  "PLR0402", # prefer from-module imports for aliased submodule imports
  "PLR1722", # prefer sys.exit() over the interactive exit() helper
  "TRY203",  # useless try/except blocks that immediately re-raise
]

ignore = [
  # typing.cast(SomeType, value) is clearer than quoted type names.
  "TC006",
  # Broad except / except-pass / except-continue are intentional in JSONL
  # parsing loops where a single malformed line must not abort the whole read.
  "BLE001",
  "S110",
  "S112",
  # Turn and SessionMeta are used at runtime (instantiated, not just annotated),
  # so TC001/TC003 false-positive on them.
  "TC001",
  "TC003",
]

[tool.ruff.lint.per-file-ignores]
# Do not flag assert statements, missing docs, or long data lines in tests.
"tests/**/*.py" = ["S101", "ARG", "D", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_chat_reader"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
files = ["src/agent_chat_reader"]
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = false
follow_imports = "silent"
disable_error_code = ["import-untyped"]
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
